# pixelfed-folder-autouploader

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
pixelfed_uploader/: __init__.py  main.py  pixelfed_client.py  upload_queue.py
tests/: __init__.py  conftest.py  test_integration.py  test_main.py  test_pixelfed_client.py  test_upload_queue.py
